<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FishDetails">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/details_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/title_main"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@android:color/white"
            android:layout_gravity="center"
            android:fontFamily="@font/nunito"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"/>


    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/details_toolbar"
        android:background="@color/backgroundUsed">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/fish_picture"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="8dp"
                android:scaleType="fitXY"
                android:background="@android:color/white"
                android:textColor="@color/detailsHeading"/>

            <TextView
                android:id="@+id/fish_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@android:color/white"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@android:color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:text="@string/details_heading_one"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/detailsHeading"/>

                <TextView
                    android:id="@+id/fish_appearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@android:color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:text="@string/details_heading_two"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/detailsHeading"/>

                <TextView
                    android:id="@+id/fish_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_heading_three"
                    android:layout_gravity="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_margin="8dp"
                    android:textColor="@color/detailsHeading"/>

                <ImageView
                    android:id="@+id/fish_range"
                    android:layout_width="227dp"
                    android:layout_height="247dp"
                    android:scaleType="fitXY"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"/>

                <TextView
                    android:id="@+id/fish_habitat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>